--- a/double_pinyin_flypy.custom.yaml
+++ b/double_pinyin_flypy.custom.yaml
@@ -3,17 +3,14 @@ patch:
   switches:
     - name: ascii_mode
       reset: 0
-      states: [ 中文, 西文 ]
-    - name: emoji_suggestion
-      reset: 1
-      states: [ "No", "Yes" ]
+      states: [中文, 西文]
     - name: full_shape
-      states: [ 半角, 全角 ]
+      states: [半角, 全角]
     - name: simplification
       reset: 1
-      states: [ 漢字, 汉字 ]
+      states: [漢字, 汉字]
     - name: ascii_punct
-      states: [ 。，, ．， ]
+      states: [。，, ．，]
   engine/translators:
     # - lua_translator@date_translator
     # - lua_translator@week_translator
@@ -21,7 +18,6 @@ patch:
     - script_translator
     - table_translator@custom_phrase
   engine/filters:
-    - simplifier@emoji_suggestion
     - simplifier
     - uniquifier
     #- charset_filter@gbk
@@ -35,28 +31,15 @@ patch:
     - selector
     - navigator
     - express_editor
-  emoji_suggestion:
-    opencc_config: emoji.json
-    option_name: emoji_suggestion
-    # tips: all
   reverse_lookup: {}
 
   #載入朙月拼音擴充詞庫
-  'translator/dictionary': luna_pinyin.extended
-  'translator/preedit_format': {}
-
+  "translator/dictionary": luna_pinyin.extended
+  "translator/preedit_format": {}
 
   # 自定义符号上屏
   punctuator:
     import_preset: symbols
-    symbols:
-      "/fs": [½, ‰, ¼, ⅓, ⅔, ¾, ⅒ ]
-      "/xh": [ ＊, ×, ✱, ★, ☆, ✩, ✧, ❋, ❊, ❉, ❈, ❅, ✿, ✲]
-      "/dq": [🌍,🌎,🌏,🌐,🌑,🌒,🌓,🌔,🌕,🌖,🌗,🌘]
-      "/sg": [🍇,🍉,🍌,🍍,🍎,🍏,🍑,🍒,🍓,🍗,🍦,🎂,🍺,🍻]
-      "/dw": [🙈,🐵,🐈,🐷,🐨,🐼,🐾,🐔,🐬,🐠,🦋]
-      "/bq": [😀,😁,😂,😃,😄,😅,😆,😉,😊,😋,😎,😍,😘,😗]
-      "/ss": [💪,👈,👉,👆,👇,✋,👌,👍,👎,✊,👊,👋,👏,👐]
     half_shape:
       "#": "#"
       "*": "*"
@@ -66,18 +49,16 @@ patch:
       "=": "="
       '\': "、"
       "%": "%"
-      "$": ["¥", "$", "€", "£", "¢", "¤"]
-      "|": ["|", "｜", "·", "・", "§", "¦", "‖", "︴"]
-      "/": ["/", "÷"]
-      "'": { pair: ["「", "」"] }
-      "[": ["【", "〔", "［"]
-      "]": ["】", "〕", "］"]
+      "$": "$"
+      "|": "|"
+      "/": "/"
+      "'": "'"
+      "[": "【"
+      "]": "】"
       "<": "《"
       ">": "》"
 
   recognizer/patterns/punct: "^/([0-9]0?|[A-Za-z]+)$"
-
-    
 
   ### 双拼使用自定义词典 custom_phrase.txt
   custom_phrase:
@@ -89,13 +70,13 @@ patch:
     initial_quality: 1
   "engine/translators/@5": table_translator@custom_phrase
 
-# Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
+  # Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
   # __include: easy_en:/patch
   # easy_en/enable_sentence: false
-# Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
+  # Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
   __include: grammar:/hant
-# Rx: BlindingDark/rime-lua-select-character:customize:schema=luna_pinyin
+  # Rx: BlindingDark/rime-lua-select-character:customize:schema=luna_pinyin
   # __include: lua_select_character:/patch # 需要lua_selector打开本行注释
 
-# librime-lua 输入动态时间和日期
+  # librime-lua 输入动态时间和日期
   "engine/translators/@6": lua_translator@date_translator
