fix: update dict

--- a/dicts/oyh_personal.dict.yaml
+++ b/dicts/oyh_personal.dict.yaml
@@ -57,5 +57,6 @@ use_preset_vocabulary: true
 已发送	yi fa song	999
 怎么个事	zen me ge shi
 这啥	zhe sha	99999
+自启动	zi qi dong	999
 中南大学	zndx
 坐标转换	zuo biao zhuan huano
